create connection with socket

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="js/jquery.js"></script>
     <script src="js/chess.js"></script>
     <script src="js/chessboard-0.3.0.js"></script>
+    <!-- <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"
+        integrity="sha384-gDaozqUvc4HTgo8iZjwth73C6dDDeOJsAgpxBcMpZYztUfjHXpzrpdrHRdVp8ySO"
+        crossorigin="anonymous"></script> -->
     <script src="main.js" type="module"></script>
 </body>
 
